# vscode-cmake-opencv-Example

libs/: CMakeLists.txt  utils.cpp  utils.h
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  UTTest.cpp
